app/src/main/java/com/gdavidpb/test/domain/usecase/errors/SearchArtistsError.kt
package com.gdavidpb.test.domain.usecase.errors

sealed class SearchArtistsError {
    class NoConnection(val isNetworkAvailable: Boolean) : SearchArtistsError()
}